Добавлено чтение списка предметов из файла и сохранение файла output.